--- a/index.html
+++ b/index.html
@@ -3,9 +3,23 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<link rel = "stylesheet" href = "styles.css">
+	<title>Early Bird Cafe</title>
 </head>
 <body>
-	
+	<!--Navigation-->
+	<nav>
+		<img src="images/logo.png">
+		<div class = "navigation">
+			<ul>
+				<li><a href = "#">Home</a></li>
+				<li><a href = "#">about</a></li>
+				<li><a href = "#">blog</a></li>
+				<li><a href = "#">What we have?</a></li>
+				<li><a href = "#">Contact</a></li>
+			</ul>
+
+		</div>
+	</nav>
 </body>
 </html>
