third commit. added main bck pic and moto

--- a/index.html
+++ b/index.html
@@ -18,8 +18,27 @@
 				<li><a href = "#">What we have?</a></li>
 				<li><a href = "#">Contact</a></li>
 			</ul>
-
 		</div>
 	</nav>
+
+	<!--Home-->
+
+	<section id = "Home">
+		<h2 class = "maintext">"Experience the perfect morning symphony with our coffee melodies."</h2>
+		<p class = "text">Welcome to Early Bird cafe, where each morning is a celebration of coffee craftsmanship. 
+			Step into our aromatic sanctuary and immerse yourself in a world where every cup tells a story. 
+			From the first tantalizing aroma to the last satisfying sip, our passion for coffee excellence shines through in every blend. 
+			Whether you're seeking a cozy spot to start your day or a mid-morning pick-me-up, our expertly curated menu awaits, promising a journey of flavor that transcends the ordinary. 
+			Join us as we elevate your coffee experience to new heights, one cup at a time.</p>
+		<div class = "btn">
+			<a class = "blue" href = "#">learn more</a>
+			<a class = "yellow" href = "#">visit us</a>
+		</div>
+	</section>
+
+
+
+
 </body>
+
 </html>
