added features box and some other changes

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel = "stylesheet" href = "styles.css">
+	<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' />
 	<title>Early Bird Cafe</title>
+	<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel = "stylesheet">
 </head>
 <body>
 	<!--Navigation-->
@@ -36,7 +38,44 @@
 		</div>
 	</section>
 
+	<!-- features -->
 
+<section id = "features">
+	<h1>captivating features</h1>
+	<p> here are some captivating features about coffee</p>
+	<div class = "fea-base">
+		<div class = "fea-box">
+			<box-icon type='solid' name='coffee-bean'></box-icon>
+			<h3>Rich History</h3>
+			<p>Delve into the rich history of coffee, 
+				tracing its origins back to ancient times 
+				and its journey through different cultures and civilizations. 
+				Highlight interesting anecdotes and legends surrounding 
+				the discovery and spread of coffee worldwide.</p>
+		</div>
+		<div class = "fea-box">
+			<box-icon type='solid' name='coffee-bean'></box-icon>
+			<h3>Rich in Antioxidants</h3>
+			<p>Coffee is loaded with antioxidants, 
+				which are beneficial compounds that help 
+				protect your cells from damage caused by 
+				free radicals. Antioxidants have been linked 
+				to various health benefits, including reducing
+			  the risk of certain diseases and promoting overall 
+				well-being</p>
+		</div>
+		<div class = "fea-box">
+			<box-icon type='solid' name='coffee-bean'></box-icon>
+			<h3>Boosts Mental Alertness</h3>
+			<p>One of the most well-known effects of coffee is 
+				its ability to enhance mental alertness and improve 
+				cognitive function. The caffeine in coffee acts as a 
+				stimulant, helping to increase focus, concentration, 
+				and even mood. This makes coffee a popular choice for 
+				starting the day or combating midday fatigue.</p>
+		</div>
+	</div>
+</section>
 
 
 </body>
