added products box

--- a/index.html
+++ b/index.html
@@ -77,6 +77,82 @@
 	</div>
 </section>
 
+<!--products-->
+<section id ="products">
+	<h1>Our popular products</h1>
+	<p>first time here? Try these!!!</p>
+	<div class= "product-box">
+
+	<div class = "coffee">
+		<img src ="/images/cappuccino.jpg" alt ="cappuccino">
+		<div class ="details">
+			<span>a nice and tasty classic...</span>
+			<h6>Capuccino</h6>
+			</div>
+			<div class = "cost">
+				$4.35
+			</div>
+		</div>
+
+		<div class = "coffee">
+			<img src ="/images/latte.jpg" alt ="Latte">
+			<div class ="details">
+				<span>Embrace the creamy indulgence of life with every sip of our lattes</span>
+				<h6>Latte</h6>
+				</div>
+				<div class = "cost">
+					$4.15
+				</div>
+			</div>
+
+			<div class = "coffee">
+				<img src ="/images/Mocha.jpg" alt ="Mocha">
+				<div class ="details">
+					<span>Savor the perfect blend of rich chocolate and bold espresso in every sip of our mochas</span>
+					<h6>Mocha</h6>
+					</div>
+					<div class = "cost">
+						$5.20
+					</div>
+				</div>
+
+				<div class = "coffee">
+					<img src ="/images/bananaSandwich.jpg" alt ="Banana Sandwich">
+					<div class ="details">
+						<span>Indulge in comfort with our banana sandwich, a delightful twist on a classic</span>
+						<h6>Banana Sandwich</h6>
+						</div>
+						<div class = "cost">
+							$3.50
+						</div>
+					</div>
+
+					<div class = "coffee">
+						<img src ="/images/Bangels.jpg" alt ="Bangels">
+						<div class ="details">
+							<span>Elevate your style with our exquisite bangles, the epitome of timeless elegance.</span>
+							<h6>Bangels</h6>
+							</div>
+							<div class = "cost">
+								$4.10
+							</div>
+						</div>
+
+						<div class = "coffee">
+							<img src ="/images/donuts.jpg" alt ="Donuts">
+							<div class ="details">
+								<span>Delight in the irresistible sweetness of our donuts, each bite a moment of pure joy.</span>
+								<h6>Donuts</h6>
+								</div>
+								<div class = "cost">
+									$6.35
+								</div>
+							</div>
+
+		</div>
+	</div>
+	</div>
+</section>
 
 </body>
 
