added register box and some pics

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			Join us as we elevate your coffee experience to new heights, one cup at a time.</p>
 		<div class = "btn">
 			<a class = "blue" href = "#">learn more</a>
-			<a class = "yellow" href = "#">visit us</a>
+			<a class = "yellow" href = "#">come visit</a>
 		</div>
 	</section>
 
@@ -153,6 +153,40 @@
 	</div>
 	</div>
 </section>
+
+	<!--Registration-->
+	<section id ="registration">
+		<div class="reminder">
+			<p>First order is free!!!(limited)</p>
+			<h1>Register to get</h1>
+			<div class = "time">
+				<div class = "date">
+					18 <br> Days
+				</div>
+				<div class = "date">
+					23 <br> hours
+				</div>
+				<div class = "date">
+					06 <br> minutes
+				</div>
+				<div class = "date">
+					 54 <br> seconds
+				</div>
+			</div>
+		</div>
+
+
+		<div class="form">
+			<h3>Create and account</h3>
+			<input type = "text" placeholder="name" name = "" id = "">
+			<input type = "text" placeholder="Email Address" name = "" id = "">
+			<input type = "text" placeholder="Phone Number" name = "" id = "">
+			<div class = "btn">
+				<a class = "blue" href = "#">submit form</a>
+				
+			</div>
+		</div>
+	</section>
 
 </body>
 
