added experts section some small changes.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel = "stylesheet" href = "styles.css">
-	<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' />
 	<title>Early Bird Cafe</title>
 	<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel = "stylesheet">
 </head>
@@ -186,6 +185,57 @@
 				
 			</div>
 		</div>
+	</section>
+	<!--Profiles-->
+	<section id = "experts">
+		<h1>Our great team!</h1>
+		<p>Our team of four talented individuals doesn't just
+			manage a coffee shop - we create an atmosphere where 
+			every cup of coffee becomes part of an unforgettable experience. 
+			We're inspired by your smiles and energy to make each visit special every day!</p>
+			<div class = "expert-box">
+				<div class = "profile">
+					<img src = "images/Himeko.jpg"  alt="our barista Himeko">
+					<h6>Himeko Akiyama</h6>
+					<p>Himeko, the friendly and talented barista, brightens the day of every customer with her warm smile and perfectly crafted cups of coffee.</p>
+					<div class = "pro-links">
+						<i class='bx bxl-facebook-circle'></i>
+						<i class='bx bxl-instagram-alt' ></i>
+						<i class='bx bxl-linkedin-square' ></i>
+					</div>
+				</div>
+				<div class = "profile">
+					<img src = "images/Alejandro.jpg"  alt="our baker Alejandro">
+					<h6>Alejandro moretti</h6>
+					<p>Alejandro, the cheerful and nice baker, spreads joy with every delectable creation that emerges from his warm oven.</p>
+					<div class = "pro-links">
+						<i class='bx bxl-facebook-circle'></i>
+						<i class='bx bxl-instagram-alt' ></i>
+						<i class='bx bxl-linkedin-square' ></i>
+					</div>
+				</div>
+				<div class = "profile">
+					<img src = "images/Lily.jpg"  alt="our barista Himeko">
+					<h6>Lily Johnson</h6>
+					<p>Lily, the helpful and efficient assistant, effortlessly juggles tasks with a smile, ensuring smooth operations and brightening everyone's day.</p>
+					<div class = "pro-links">
+						<i class='bx bxl-facebook-circle'></i>
+						<i class='bx bxl-instagram-alt' ></i>
+						<i class='bx bxl-linkedin-square' ></i>
+					</div>
+				</div>
+				<div class = "profile">
+					<img src = "images/Edward.jpg"  alt="our barista Himeko">
+					<h6>Edward Stormborn</h6>
+					<p>
+						Edward, the compassionate manager, guides his team with care and efficiency, fostering a positive workplace atmosphere.</p>
+					<div class = "pro-links">
+						<i class='bx bxl-facebook-circle'></i>
+						<i class='bx bxl-instagram-alt' ></i>
+						<i class='bx bxl-linkedin-square' ></i>
+					</div>
+				</div>
+			</div>
 	</section>
 
 </body>
