added footer section and links logos

--- a/index.html
+++ b/index.html
@@ -232,11 +232,37 @@
 					<div class = "pro-links">
 						<i class='bx bxl-facebook-circle'></i>
 						<i class='bx bxl-instagram-alt' ></i>
-						<i class='bx bxl-linkedin-square' ></i>
+						<i class='bx bxl-linkedin-square'></i>
 					</div>
 				</div>
 			</div>
 	</section>
+
+	<!--Footer-->
+	<footer id = "footer-main">
+		<div class = "footer-col">
+			<h3>Get in touch</h3>
+			<li>phone:0777 777 777</li>
+			<li>or send us an email</li>
+		</div>
+		<div class = "footer-col">
+			<h3>WE ARE HIRING!!!</h3>
+			<p>Want a job? send us your email</p>
+			<div class = "subscribe">
+					<input type = "text" placeholder="Your Email address">
+					<a href = "#" class = "ye">SUBSCRIBE</a>
+			</div>
+		</div>
+
+		<div class = "copyright">
+			<p>Copyright 2024 All rights reserved | This template is made by TanookiBallz</p>
+			<div class = "pro-links">
+					<i class='bx bxl-facebook-circle'></i>
+					<i class='bx bxl-instagram-alt' ></i>
+					<i class='bx bxl-linkedin-square'></i>
+				</div>
+			</div>
+	</footer>
 
 </body>
 
