adding website responsiveness making burrger menu for devices

--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
 		<img src="images/logo.png">
 		<div class = "navigation">
 			<ul>
+				<i id = "menu-close" class='bx bx-shield-x bx-flip-vertical' ></i>
 				<li><a href = "#">Home</a></li>
 				<li><a href = "#">about</a></li>
-				<li><a href = "#">blog</a></li>
 				<li><a href = "#">What we have?</a></li>
 				<li><a href = "#">Contact</a></li>
 			</ul>
+			<img id = "menu-btn" src = "images/menu.png">
 		</div>
 	</nav>
 
@@ -32,8 +33,8 @@
 			Whether you're seeking a cozy spot to start your day or a mid-morning pick-me-up, our expertly curated menu awaits, promising a journey of flavor that transcends the ordinary. 
 			Join us as we elevate your coffee experience to new heights, one cup at a time.</p>
 		<div class = "btn">
-			<a class = "blue" href = "#">learn more</a>
-			<a class = "yellow" href = "#">come visit</a>
+			<a class = "blue" href = "#">our experts</a>
+			<a class = "yellow" href = "#">contact us</a>
 		</div>
 	</section>
 
@@ -206,7 +207,7 @@
 				</div>
 				<div class = "profile">
 					<img src = "images/Alejandro.jpg"  alt="our baker Alejandro">
-					<h6>Alejandro moretti</h6>
+					<h6>Alejandro Moretti</h6>
 					<p>Alejandro, the cheerful and nice baker, spreads joy with every delectable creation that emerges from his warm oven.</p>
 					<div class = "pro-links">
 						<i class='bx bxl-facebook-circle'></i>
@@ -216,7 +217,7 @@
 				</div>
 				<div class = "profile">
 					<img src = "images/Lily.jpg"  alt="our barista Himeko">
-					<h6>Lily Johnson</h6>
+					<h6>Lily Ymanaka</h6>
 					<p>Lily, the helpful and efficient assistant, effortlessly juggles tasks with a smile, ensuring smooth operations and brightening everyone's day.</p>
 					<div class = "pro-links">
 						<i class='bx bxl-facebook-circle'></i>
@@ -226,7 +227,7 @@
 				</div>
 				<div class = "profile">
 					<img src = "images/Edward.jpg"  alt="our barista Himeko">
-					<h6>Edward Stormborn</h6>
+					<h6>Edward Edison</h6>
 					<p>
 						Edward, the compassionate manager, guides his team with care and efficiency, fostering a positive workplace atmosphere.</p>
 					<div class = "pro-links">
@@ -255,7 +256,7 @@
 		</div>
 
 		<div class = "copyright">
-			<p>Copyright 2024 All rights reserved | This template is made by TanookiBallz</p>
+			<p>Copyright 2024 All rights reserved | This template is made by Almazov Aidarbek  IEMIT-23 co.</p>
 			<div class = "pro-links">
 					<i class='bx bxl-facebook-circle'></i>
 					<i class='bx bxl-instagram-alt' ></i>
