new section about us added. added info about the cafe and some other products

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 		<div class = "navigation">
 			<ul>
 				<i id = "menu-close" class='bx bx-shield-x bx-flip-vertical' ></i>
-				<li><a href = "#">Home</a></li>
-				<li><a href = "#">about</a></li>
-				<li><a href = "#">What we have?</a></li>
-				<li><a href = "#">Contact</a></li>
+				<li><a class = "active" href = "#">Home</a></li>
+				<li><a href = "about.html">about us</a></li>
+				<li><a href = "products.html">What we have?</a></li>
+				<li><a href = "contact.html">Contact</a></li>
 			</ul>
 			<img id = "menu-btn" src = "images/menu.png">
 		</div>
@@ -30,9 +30,8 @@
 		<h2 class = "maintext">"Experience the perfect morning symphony with our coffee melodies."</h2>
 		<p class = "text">Welcome to Early Bird cafe, where each morning is a celebration of coffee craftsmanship. 
 			Step into our aromatic sanctuary and immerse yourself in a world where every cup tells a story. 
-			From the first tantalizing aroma to the last satisfying sip, our passion for coffee excellence shines through in every blend. 
-			Whether you're seeking a cozy spot to start your day or a mid-morning pick-me-up, our expertly curated menu awaits, promising a journey of flavor that transcends the ordinary. 
-			Join us as we elevate your coffee experience to new heights, one cup at a time.</p>
+			From the first tantalizing aroma to the last satisfying sip, our passion for coffee excellence shines through in every blend.  
+			</p>
 		<div class = "btn">
 			<a class = "blue" href = "#">our experts</a>
 			<a class = "yellow" href = "#">contact us</a>
@@ -160,21 +159,28 @@
 		<div class="reminder">
 			<p>First order is free!!!(limited)</p>
 			<h1>Register to get</h1>
-			<div class = "time">
-				<div class = "date">
-					18 <br> Days
-				</div>
-				<div class = "date">
-					23 <br> hours
-				</div>
-				<div class = "date">
-					06 <br> minutes
-				</div>
-				<div class = "date">
-					 54 <br> seconds
+			<div class="container">
+				<div class="countdown">
+					<div class="time-unit">
+						<span id="days">18</span>
+						<span>Days</span>
+					</div>
+					<div class="time-unit">
+						<span id="hours">23</span>
+						<span>Hours</span>
+					</div>
+					<div class="time-unit">
+						<span id="minutes">06</span>
+						<span>Minutes</span>
+					</div>
+					<div class="time-unit">
+						<span id="seconds">54</span>
+						<span>Seconds</span>
+					</div>
 				</div>
 			</div>
-		</div>
+			<script src="main.js"></script>
+		
 
 
 		<div class="form">
