added new products section made it respomsive added info about other products(click on food photos)

--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
 		<div class = "navigation">
 			<ul>
 				<i id = "menu-close" class='bx bx-shield-x bx-flip-vertical' ></i>
-				<li><a  href = "#">Home</a></li>
+				<li><a  href = "index.html">Home</a></li>
 				<li><a class = "active" href = "about.html">about us</a></li>
 				<li><a href = "products.html">What we have?</a></li>
 				<li><a href = "contact.html">Contact</a></li>
@@ -64,39 +64,50 @@
 	<!-- features -->
 
 <section id = "features">
-	<h1>captivating features</h1>
-	<p> here are some captivating features about coffee</p>
+	<h1>great features</h1>
+	<p> here are some captivating features about US</p>
 	<div class = "fea-base">
 		<div class = "fea-box">
 			<box-icon type='solid' name='coffee-bean'></box-icon>
-			<h3>Rich History</h3>
-			<p>Delve into the rich history of coffee, 
-				tracing its origins back to ancient times 
-				and its journey through different cultures and civilizations. 
-				Highlight interesting anecdotes and legends surrounding 
-				the discovery and spread of coffee worldwide.</p>
+			<h3>Gourmet Breakfast Menu</h3>
+			<p>The Early Bird Café offers a gourmet breakfast menu that goes beyond the typical offerings. 
+				Customers can enjoy a variety of artisanal dishes made from fresh, locally-sourced ingredients. 
+				Signature items include avocado toast with a twist, featuring heirloom tomatoes and microgreens, 
+				and a delectable eggs Benedict served on house-made sourdough. The café also caters to diverse dietary 
+				needs with gluten-free, vegan, and vegetarian options, ensuring there's something delightful for everyone.</p>
 		</div>
 		<div class = "fea-box">
 			<box-icon type='solid' name='coffee-bean'></box-icon>
-			<h3>Rich in Antioxidants</h3>
-			<p>Coffee is loaded with antioxidants, 
-				which are beneficial compounds that help 
-				protect your cells from damage caused by 
-				free radicals. Antioxidants have been linked 
-				to various health benefits, including reducing
-			  the risk of certain diseases and promoting overall 
-				well-being</p>
+			<h3> Eco-Friendly Practices</h3>
+			<p>The Early Bird Café is committed to sustainability and eco-friendly practices. 
+				The café uses biodegradable packaging, composts food waste, and sources ingredients 
+				from local farms to reduce its carbon footprint. Additionally, they offer discounts to 
+				customers who bring their own reusable cups and containers. The interior decor features 
+				upcycled furniture and energy-efficient lighting, creating a cozy and environmentally conscious 
+				atmosphere that patrons can feel good about supporting.</p>
 		</div>
 		<div class = "fea-box">
 			<box-icon type='solid' name='coffee-bean'></box-icon>
-			<h3>Boosts Mental Alertness</h3>
-			<p>One of the most well-known effects of coffee is 
-				its ability to enhance mental alertness and improve 
-				cognitive function. The caffeine in coffee acts as a 
-				stimulant, helping to increase focus, concentration, 
-				and even mood. This makes coffee a popular choice for 
-				starting the day or combating midday fatigue.</p>
+			<h3>Community-Centric Events</h3>
+			<p>The Early Bird Café serves as a hub for the local community, hosting a variety of events 
+				that bring people together. Regular events include weekend farmers' markets, live acoustic 
+				music sessions, poetry readings, and art exhibits featuring local artists. They also offer 
+				coffee brewing workshops and tastings, where coffee enthusiasts can learn about different 
+				brewing methods and taste single-origin coffees from around the world. These events foster 
+				a sense of community and make the café a vibrant social space.</p>
 		</div>
+	</div>
+</section>
+<section id = "trust">
+	<h1>Trusted by</h1>
+	<p>Start your day with a smile at Early Bird Café – Where every cup is brewed with love and every bite is a delight.</p>
+	<div class = "trust-img">
+		<img src = "images/coffeecup icon.png">
+		<img src = "images/croissant icon.png">
+	  <img src = "images/customer icon.png">
+	  <img src = "images/community icon.png">
+	  <img src = "images/eco-friendly icon.png">
+	  <img src = "images/barista icon.png">
 	</div>
 </section>
 
