--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 					</div>
 
 					<div class = "coffee">
-						<img src ="/images/Bangels.jpg" alt ="Bangels">
+						<img src ="/images/Bangels (1).jpg" alt ="Bangels">
 						<div class ="details">
 							<span>Elevate your style with our exquisite bangles, the epitome of timeless elegance.</span>
 							<h6>Bangels</h6>
@@ -225,7 +225,7 @@
 				<div class = "profile">
 					<img src = "images/Lily.jpg"  alt="our barista Himeko">
 					<h6>Lily Ymanaka</h6>
-					<p>Lily, the helpful and efficient assistant, effortlessly juggles tasks with a smile, ensuring smooth operations and brightening everyone's day.</p>
+					<p>Lily, the helpful and efficient assistant, effortlessly juggles tasks with a smile, ensuring smooth operations and brightening day</p>
 					<div class = "pro-links">
 						<i class='bx bxl-facebook-circle'></i>
 						<i class='bx bxl-instagram-alt' ></i>
