made buttons on first page responsive

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 			From the first tantalizing aroma to the last satisfying sip, our passion for coffee excellence shines through in every blend.  
 			</p>
 		<div class = "btn">
-			<a class = "blue" href = "#">our experts</a>
-			<a class = "yellow" href = "#">contact us</a>
+			<a class = "blue" href = "#experts">our experts</a>
+			<a class = "yellow" href = "contact.html">contact us</a>
 		</div>
 	</section>
 
